started building out aws for album host

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1043.0.min.js"></script>
+    <script src="./PhotoViewer.js"></script>
+    <script>listAlbums();</script>
     <title>Sorta My Face</title>
   </head>
   <body>
